--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2023 Vickify. All rights reserved.</p>
+                <p>&copy; 2025 Vickify. All rights reserved.Developed by Souvick.</p>
             </div>
         </div>
     </footer>
