--- a/index.html
+++ b/index.html
@@ -177,13 +177,13 @@
             <div class="team-slider">
                 <div class="team-member">
                     <div class="member-image">
-                        <img src="https://via.placeholder.com/150" alt="Team Member">
+                        <img src="assets/images/souvick-logo.jpg" alt="Team Member">
                     </div>
-                    <h3>Alex Johnson</h3>
-                    <p class="role">Lead Programmer</p>
+                    <h3>Souvick Kumar Halder/h3>
+                    <p class="role">Team Lead & Founder</p>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-github"></i></a>
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                        <a href="github.com/mrsouvick"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/souvick-kumar-halder-752508292/"><i class="fab fa-linkedin"></i></a>
                     </div>
                 </div>
                 
