--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     <div class="member-image">
                         <img src="assets/images/souvick-logo.jpg" alt="Team Member">
                     </div>
-                    <h3>Souvick Kumar Halder/h3>
+                    <h3>Souvick Kumar Halder </h3>
                     <p class="role">Team Lead & Founder</p>
                     <div class="social-links">
                         <a href="github.com/mrsouvick"><i class="fab fa-github"></i></a>
