--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <h3>Souvick Kumar Halder </h3>
                     <p class="role">Team Lead & Founder</p>
                     <div class="social-links">
-                        <a href="github.com/mrsouvick"><i class="fab fa-github"></i></a>
+                        <a href="https://www.github.com/mrsouvick"><i class="fab fa-github"></i></a>
                         <a href="https://www.linkedin.com/in/souvick-kumar-halder-752508292/"><i class="fab fa-linkedin"></i></a>
                     </div>
                 </div>
