--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="#" class="logo">Vickify</a>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
-                <li><a href="#courses">Courses</a></li>
+                <li><a href="courses.html">Courses</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#tutorials">Tutorials</a></li>
                 <li><a href="#team">Team</a></li>
@@ -37,7 +37,7 @@
             <h2 class="hero-subtitle">Learn, Code, Innovate</h2>
             <p class="hero-text">Your all-in-one destination for tech learning</p>
             <div class="hero-buttons">
-                <a href="#courses" class="btn btn-primary">Explore Courses</a>
+                <a href="courses.html" class="btn btn-primary">Explore Courses</a>
                 <a href="#tutorials" class="btn btn-secondary">Start Learning</a>
             </div>
         </div>
@@ -240,7 +240,7 @@
                     <h4>Quick Links</h4>
                     <ul>
                         <li><a href="#home">Home</a></li>
-                        <li><a href="#courses">Courses</a></li>
+                        <li><a href="courses.html">Courses</a></li>
                         <li><a href="#projects">Projects</a></li>
                         <li><a href="#tutorials">Tutorials</a></li>
                     </ul>
@@ -255,10 +255,10 @@
                 <div class="footer-social">
                     <h4>Follow Us</h4>
                     <div class="social-icons">
-                        <a href="#"><i class="fab fa-github"></i></a>
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="https://github.com/mrsouvick"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/souvick-kumar-halder-752508292/"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.youtube.com/channel/UCTaCUiR3c1E2qb1r_qiVT0Q"><i class="fab fa-youtube"></i></a>
+                      
                     </div>
                 </div>
             </div>
