--- a/courses.html
+++ b/courses.html
@@ -60,10 +60,10 @@
                         <h3>Course Content</h3>
                         <div class="video-playlist">
                             <!-- Replace with your actual YouTube embed code -->
-                            <iframe width="100%" height="400" src="https://www.youtube.com/embed/YOUR_MAIN_VIDEO_ID" frameborder="0" allowfullscreen></iframe>
+                            <iframe width="100%" height="400" src="https://youtube.com/playlist?list=PLsUW2P471J_Qng0TwTcCThUwqlsq-qiR3&si=WZ6ThJrtrL2xbVFX" frameborder="0" allowfullscreen></iframe>
                             
                             <div class="playlist-items">
-                                <a href="YOUR_PLAYLIST_LINK" target="_blank" class="btn btn-full">
+                                <a href="https://youtube.com/playlist?list=PLsUW2P471J_Qng0TwTcCThUwqlsq-qiR3&si=WZ6ThJrtrL2xbVFX" target="_blank" class="btn btn-full">
                                     <i class="fab fa-youtube"></i> View Full Playlist (15 Videos)
                                 </a>
                             </div>
