--- a/courses.html
+++ b/courses.html
@@ -60,8 +60,7 @@
                         <h3>Course Content</h3>
                         <div class="video-playlist">
                             <!-- Replace with your actual YouTube embed code -->
-                            <iframe width="100%" height="400" src="https://youtube.com/playlist?list=PLsUW2P471J_Qng0TwTcCThUwqlsq-qiR3&si=WZ6ThJrtrL2xbVFX" frameborder="0" allowfullscreen></iframe>
-                            
+                           <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=gZNQp9ZDda6I6Nu2&amp;list=PLsUW2P471J_Qng0TwTcCThUwqlsq-qiR3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                             <div class="playlist-items">
                                 <a href="https://youtube.com/playlist?list=PLsUW2P471J_Qng0TwTcCThUwqlsq-qiR3&si=WZ6ThJrtrL2xbVFX" target="_blank" class="btn btn-full">
                                     <i class="fab fa-youtube"></i> View Full Playlist (15 Videos)
