--- a/index.html
+++ b/index.html
@@ -143,25 +143,25 @@
             <div class="tutorials-grid">
                 <div class="tutorial-card">
                     <div class="video-container">
-                        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=MTCbqHXqy-sKmi_R&amp;list=PLsUW2P471J_Scdv94oxOy5r_PzyCKgARs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
-                    <h3>Java Basics</h3>
-                    <p>Learn Java fundamentals in 30 minutes.</p>
+                    <h3>C++ in Bengali</h3>
+                    <p>Learn C++ fundamentals in Bengali.</p>
                 </div>
                 
                 <div class="tutorial-card">
                     <div class="video-container">
-                        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
+                       <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=Ejd9kt_VzLrbKybo&amp;list=PLsUW2P471J_RctIpBs_gVlz-A7CJh0jI4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
-                    <h3>Python Crash Course</h3>
-                    <p>Get started with Python programming.</p>
+                    <h3>ROS Crash Course</h3>
+                    <p>Get started with Robot Operating System.</p>
                 </div>
                 
                 <div class="tutorial-card">
                     <div class="video-container">
-                        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=ksFwXNzHJS6ctu0T&amp;list=PLsUW2P471J_Qng0TwTcCThUwqlsq-qiR3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
-                    <h3>HTML/CSS for Beginners</h3>
+                    <h3>HTML for Beginners</h3>
                     <p>Build your first website from scratch.</p>
                 </div>
             </div>
